syntax = "proto3";
package pb;

option go_package = "/internal/service;service";

message UserModel{
  // @inject_tag: json:"user_id"
  uint32 user_id=1;
  // @inject_tag: json:"username"
  string  username = 2;
  // @inject_tag: json:"// @inject_tag: json:"password"
  string password = 3;
  // @inject_tag: json:"// @inject_tag: json:"role"
  uint32  role = 4;
  // @inject_tag: json:"// @inject_tag: json:"token"
  string token = 5;
}

message UserRequest{
  UserModel UserDetail = 1;
  string PasswordConfirm = 2;
}

message UserDetailResponse{
  UserModel UserDetail = 1;
  uint32 Code = 2;
  string Msg = 3;
}



service userService{

  rpc UserRegister(UserRequest) returns(UserDetailResponse);
  rpc UserLogin(UserRequest) returns (UserDetailResponse);
  rpc GetUser(UserRequest) returns (UserDetailResponse);
  rpc  DeleteUser(UserRequest) returns (UserDetailResponse);
  rpc  EditUser(UserRequest) returns (UserDetailResponse);
  rpc  UpdateUserPassword(UserRequest) returns (UserDetailResponse);
  rpc GetUsers(UserRequest) returns (UserDetailResponse);
}